testsuite/tests/linear/should_fail/LinearGADTNewtype.hs
{-# LANGUAGE LinearTypes, GADTs #-}
newtype A where
   A :: Int -> A
